--- a/nucampsiteServer/package.json
+++ b/nucampsiteServer/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongoose": "^5.8.7",
+    "mongoose": "^5.9.6",
     "mongoose-currency": "^0.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.2",
+    "session-file-store": "^1.4.0"
   }
 }
