--- a/nucampsiteServer/package.json
+++ b/nucampsiteServer/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
@@ -19,6 +20,7 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
+    "passport-facebook-token": "^3.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
